# python_script_automation-file_sorter

./: .gitignore  LICENSE  MANIFEST.in  README  README.md  SETUP.md  config.example.json  files_sorter.py  pyproject.toml  requirements.txt  setup.py
file_sorter/: __init__.py  cli.py  config.py  core.py  watch.py
tests/: test_config.py  test_core.py
