[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "file-sorter"
version = "1.0.0"
description = "An intelligent file organization tool with CLI and advanced features"
authors = [
    {name = "File Sorter Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
keywords = ["file", "organizer", "sorter", "automation", "cli"]
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Tony-Stone-Code/python_script_automation-file_sorter"
Repository = "https://github.com/Tony-Stone-Code/python_script_automation-file_sorter"
"Bug Tracker" = "https://github.com/Tony-Stone-Code/python_script_automation-file_sorter/issues"

[project.scripts]
file-sorter = "file_sorter.cli:main"

[tool.setuptools]
packages = ["file_sorter"]

[tool.setuptools.package-data]
file_sorter = ["*.json"]
